--- a/skin-nagimemo/main.css
+++ b/skin-nagimemo/main.css
@@ -3,10 +3,10 @@
 /*  Root Variables & Theme
  * ![NagiMemo Skin]
  * 
- * NagiMemo v1.0.0
+ * NagiMemo v1.1.4
  * Copyright (c) 2026 Lichiphen
  * Licensed under the MIT License
- * https://gitlab.com/lichiphen/nagimemo/-/blob/main/LICENSE
+ * https://github.com/Lichiphen/NagiMemo/blob/main/LICENSE
  */
 :root {
     /* Colors */
